--- a/henanshijiantuan.html
+++ b/henanshijiantuan.html
@@ -324,7 +324,7 @@ AutoStart : true
 
 <div class="xf_sven">
 北京交通大学河南寒招团主办 　</br>
-设计制作：北交大河南寒招团  <br/>
+设计制作：代宝钰  <br/>
 本网站由栾川一高官网网站修改而成，如有侵权，立删<br/>
 网站备案：xxxxxxxxxxxx（待定）<br/>
 		</div>	
